# lisa

./: .gitmodules  CMakeLists.txt  README.md  build.sh  lisa.tar.xz  readme.txt  run_lisa.sh  starexec_build_lisa.sh  starexec_description.txt  starexec_run_lisa.sh
examples/: arbiter.json  arbiter.tlsf  arbiter1.tlsf  arbiter2.tlsf  ltlf3377.json  test.tslf  test1.json  test_3.json  test_4.json  test_5.json  test_6.json  test_a.tlsf  test_b.tlsf
src/: CMakeLists.txt  Makefile  argparser.cc  argparser.hh  dfwa.cc  dfwa.hh  dfwavar.cc  dfwavar.hh  extrasources.make  game.cc  game.hh  lisa.cc  ltl_parser.cpp  ltlf2fol.cc  main.cpp  mona.cc  specparser.cc  specparser.hh  synthesizer.cpp  synthesizer.hpp  translator.cc  translator.hh  utils.hpp
third_parties/: readme.txt
third_parties/mona-install-prefix/include/mona/: config.h
third_parties/mona-install-prefix/lib/: libmonabdd.la  libmonadfa.la  libmonagta.la  libmonamem.la  libmonamem.so.1.0.4
third_parties/pstreams-1.0.3/: test_minimum  test_pstreams
